<resources>
    <string name="app_name">Bible</string>
    <string name="action_settings">Settings</string>
    <string name="my_epub">My e-BiBle</string>
    <string name="about">General Info</string>
    <string name="about_title_nkjv">About the New King James Version (NKJV)</string>
    <string name="about_content_nkjv">The New King James Version is an up-to-date translation of the Bible by devout scholars, it maintains the beauty of the King James Version while increasing the accuracy and making the meaning clearer for today’s reader. The NKJV presents the Bible with updated clarity that readers truly appreciate, and thus is amongst the best Bible translations for studying God’s Word.
The NKJV was commissioned in 1975 by Thomas Nelson Publishers, and more than 120 respected Bible scholars, church leaders, and lay Christians worked for seven years to create a more modern translation of Scripture, yet one that would retain the purity and stylistic beauty of the original King James. Faithfulness to the original Bible texts in Greek, Hebrew, and Aramaic, the NKJV translation applies the most recent research in linguistics, archaeology, and textual studies.
Bob Souer is the featured reader for the non-dramatic version. Stephen Johnson is the featured reader for the dramatic version.</string>
    <string name="about_title_niv">About the New International Version (NIV)</string>
    <string name="about_content_niv">The New International Version (NIV) is an English translation of the Christian Bible. The NIV was originally published in the 1970s, after more than five decades of work that united evangelicals in an inter-denominational effort to provide a trustworthy, accessible version of the Bible for the English-speaking world. It was updated in 1984 and again in 2011, and has become one of the best-selling modern translations, with millions relying on this faithful translation of God’s Holy Word.
Narrated by George Sarris.</string>
    <string name="about_title_wop_nkjv">About the Word Of Promise (WOP-NKJV)</string>
    <string name="about_content_wop_nkjv">This faithful rendering of the New King James Version® presents the Bible in more than 90 hours of compelling, dramatic audio theater format.  This beautiful audio production immerses listeners in the dramatic reality of the Scriptures, complemented by an original music score by composer Stefano Mainetti (Abba Pater) and feature film quality sound effects.  Compellingly narrated by Michael York, more than 600 actors contributed to bring each book of the Bible to life.  The WOP-NKJV features outstanding performances by Jim Caviezel as Jesus, Richard Dreyfuss as Moses, Gary Sinise as David, Jason Alexander as Joseph, Marisa Tomei as Mary Magdalene, Stacy Keach as Paul, Louis Gossett, Jr. as John, Jon Voight as Abraham, Marcia Gay Harden as Esther, Joan Allen as Deborah, Max von Sydow as Noah, and Malcolm McDowell as Solomon.</string>
    <string name="about_title_niv_spanish">About La Santa Biblia, Nueva Version Internacional - (NVI-Spanish)</string>
    <string name="about_content_niv_spanish">In 1979, The International Bible Society (now Biblica®) decided to produce a New Testament in Spanish following the NIV translation principles. For more than ten years the Biblical scholars involved worked to preserve the original language as much as possible while focusing on the target language as well. Many original, well-known phrases were kept, but others were introduced to communicate concepts that had not previously translated smoothly into Spanish.  The NVI-Spanish Bible is an authentic and faithful translation of the original Bible texts into Spanish.
Rafael Cruz is the featured reader with introductions by Norma Pinson.</string>

    <string name="copy_write">The content is licensed by HarperCollins.  The copyrights of application is developed and owned by Azpen innovation.</string>

    <string name="back">Back</string>
    <string name="search">Search</string>
    <string name="notes">Notes</string>
    <string name="bookmark">Bookmark</string>
    <string name="favorite">favorite</string>
    <string name="audio_list">Audios</string>
    <string name="no_search_results">Sorry,no search results!</string>
    <string name="delete_bookmark">delete bookmark</string>
    <string name="delete_bookmark_success">delete bookmark success!</string>

    <string name="file_not_exist">file is not exist</string>
    <string name="parsing_file">Parsing file…</string>
    <string name="save_bookmark">Save Bookmark Success!</string>

    <string name="chapter">Chapter</string>
    <string name="audio">Audio</string>

    <string name="confirm">Confirm</string>
    <string name="cancel">Cancel</string>
</resources>
