<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/bg_activity"

    tools:context="com.papa.bible.EpubActivity">

    <GridView
        android:id="@+id/grid_view"
        android:numColumns="3"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerVertical="true"
        android:background="@drawable/bg_layout_repeat"/>


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:gravity="center_vertical"
        android:orientation="horizontal">


        <TextView
            android:id="@+id/back_tv"
            style="@style/EpubFunctionText"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/back"/>

        <TextView
            android:id="@+id/search_tv"
            style="@style/EpubFunctionText"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/search"/>

        <TextView
            android:id="@+id/notes_tv"
            style="@style/EpubFunctionText"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:visibility="gone"
            android:text="@string/notes"/>

        <TextView
            android:id="@+id/bookmark_tv"
            style="@style/EpubFunctionText"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/bookmark"/>

    </LinearLayout>


</RelativeLayout>
